# log-whisper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  ELECTRON_MIGRATION_GUIDE.md  LICENSE  PORT_SETUP.md  README.md  RELEASE.md  SECURITY.md  START_GUIDE.md  build-app.bat  build-styles.bat  build-styles.sh  build-tauri.bat  config.db  config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  quick-start.sh  quick-test.bat  start-api.bat  start-api.sh  start-dev.bat  start-electron-app.bat  start-tauri-dev.bat  start-tauri.sh  tailwind.config.cjs  tailwind.config.js  test-direct.html  test-integration.bat  test-log-1.txt  test-log-2.txt  test-simple.html  test-tauri.html  (+7 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  测试策略.md  部署指南.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  事件系统.md  命令接口.md  应用状态.md
.qoder/repowiki/zh/content/前端实现/: UI结构设计.md  前端实现.md
.qoder/repowiki/zh/content/前端实现/前端逻辑实现/: Tauri IPC通信集成.md  事件监听与处理机制.md  前端初始化流程.md  前端逻辑实现.md  性能优化策略.md  文件处理与解析流程.md
.qoder/repowiki/zh/content/前端实现/样式实现/: 主题系统.md  动画效果.md  样式实现.md
.qoder/repowiki/zh/content/插件系统/: JSON修复插件.md  MyBatis插件.md  原始文本插件.md  插件系统.md  错误高亮插件.md
.qoder/repowiki/zh/content/架构设计/: 架构设计.md  项目结构.md
.qoder/repowiki/zh/content/架构设计/Tauri集成/: Tauri命令接口.md  Tauri配置管理.md  Tauri集成.md  事件通信系统.md  应用状态管理.md
.qoder/repowiki/zh/content/架构设计/插件机制/: LogRenderer Trait定义.md  (+2 more)
.qoder/repowiki/zh/content/核心模块/: 工具服务.md  数据模型.md  核心模块.md  渲染引擎.md  解析引擎.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.vite-config/: port.json
data/: application-log.txt  container-log.txt  pod.txt
doc/: Docker-JSON日志解析插件说明.md  产品设计文档.md  技术方案文档.md  插件系统实现总结.md  插件系统架构与扩展规划.md  插件系统重构方案.md  需求.md  项目结构规划.md
docs/: 大文件支持改进.md
electron/: main.js  preload.js
logs/: README.md
scripts/: build.bat  build.sh  dev.bat  release.bat  release.sh  start-stable.cjs  test.bat  test.sh  update-tauri-port.cjs
src/: App.tsx  index.css  index.html  main.js  main.tsx  style.css  test.html
src-rust/: Cargo.toml  config.db
src-rust/examples/: plugin_system_demo.rs  springboot_log_processing.rs
src-rust/src/: main.rs
src-rust/src/config/: database.rs  mod.rs  models.rs  service.rs
src-rust/src/plugins/: builtin.rs  config.rs  core.rs  engine.rs  mod.rs  registry.rs  renderers.rs  springboot.rs  test.rs
src-tauri/: Cargo.toml  debug_chain.rs  tauri.conf.json  tauri.static.conf.json  test_docker_chain.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs  parse.rs  plugin.rs  theme.rs  window.rs
src-tauri/src/config/storage/: database.rs  mod.rs  models.rs  simple.rs
src-tauri/src/models/: chunk_loader.rs  log_entry.rs  mod.rs  parse_result.rs  plugin_config.rs  rendered_block.rs
src-tauri/src/parser/: cache.rs  chunk_loader.rs  file_reader.rs  line_parser.rs  log_parser.rs  mod.rs  renderer.rs
src-tauri/src/plugins/: auto.rs  chain.rs  core.rs  correlation_tracker.rs  debug_tests.rs  debug_tests2.rs  docker_json.rs  error_highlighter.rs  filters.rs  formatter.rs  json_repair.rs  log_deduplicator.rs  manager.rs  mod.rs  mybatis.rs  presets.rs  raw.rs  registry.rs  replica_analyzer.rs  springboot.rs  springboot_format_test.rs  springboot_test.rs  tests.rs  time_drift_navigator.rs  trait_def.rs
src-tauri/src/tauri/: commands.rs  events.rs  handlers.rs  mod.rs  state.rs
src-tauri/src/utils/: encoding_detector.rs  file_utils.rs  mod.rs  performance.rs  string_utils.rs  time_utils.rs
src-tauri/src && cp -r Drepositorylanlog-whispersrc-rustsrcplugins Drepositorylanlog-whispersrc-taurisrc/: service.rs
tests/: large_file_test.py
tests/integration/: mod.rs  parse_workflow_test.rs
(+28 files in other folders)
