[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
log = "0.4"
env_logger = "0.10"
