[package]
name = "log-whisper-api"
version = "1.0.0"
edition = "2021"
description = "LogWhisper API Server"
authors = ["LogWhisper Team"]

[workspace]
# 空的工作区配置，用于避免与父目录冲突

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
# HTTP 服务器
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志处理
log = "0.4"
env_logger = "0.10"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1.10"

# 文件处理
walkdir = "2.4"
mime_guess = "2.0"

# 字符串处理
unicode-segmentation = "1.10"
encoding_rs = "0.8"

# 并发处理
rayon = "1.8"

# UUID生成
uuid = { version = "1.6", features = ["v4"] }

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }