[package]
name = "log-whisper"
version = "1.0.0"
description = "轻量级桌面日志分析工具"
authors = ["LogWhisper Team"]
license = "MIT"
repository = "https://github.com/log-whisper/log-whisper"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["custom-protocol"] }
tauri-macros = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志处理
log = "0.4"
env_logger = "0.10"

# 文件处理
walkdir = "2.4"
mime_guess = "2.0"

# 性能监控
sysinfo = "0.30"

# 并发处理
rayon = "1.8"

# 字符串处理
unicode-segmentation = "1.10"
encoding_rs = "0.8"

# 时间处理
time = "0.3"

# 错误处理
color-eyre = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
